syntax = "proto3";

message PayLoad{
    enum MessageType{
        None = 0;
        world = 1;
        worldList = 2;
        join = 3;
        syncStatus = 4;
    }
    string id = 1;//Message Id for distinction 
    
    MessageType type = 2;

    World world = 3;
    Join join = 4;
    WorldList worldList = 5;
    Synchronize syncStatus = 6;

}

message World {//create a world
    string id = 1;//send null receive worldId
    string name = 2;
    string password = 3;
    int32 playerCount = 4;
    int32 maxPlayerCount = 5;
}

message Join {//join a world
    string id = 1;//send worldId , return empty if fail
    string password = 2;//optional password (strictly match)
    string iceCandidate = 3;//send ICE candidate
}

message WorldList{// send any return real
    map<string,string> worlds = 1;//key:roomId value:roomName
}

message Synchronize {
    string id = 1;//worldId
    int32 playerCount = 2;
}